show a separate sum for users

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -8,6 +8,10 @@
         android:key="username"
         android:summary="summary"
         android:defaultValue="default"></EditTextPreference>
+    <EditTextPreference android:title="Authors"
+    android:key="authors_list"
+    android:summary="authors, separated by commas please"
+    android:defaultValue="Author1,Author2"></EditTextPreference>
     <EditTextPreference android:title="create_record_route"
         android:key="server_adr"
         android:summary="summary"
@@ -16,14 +20,4 @@
         android:key="records_list_adr"
         android:summary="summary"
         android:defaultValue="default"></EditTextPreference>
-    <!--<CheckBoxPreference android:title="Application Updates"-->
-        <!--android:defaultValue="false"-->
-        <!--android:summary="This option if selected will allow the application to check for latest versions."-->
-        <!--android:key="applicationUpdates" />-->
-    <!--<ListPreference     android:title="Download Details"-->
-        <!--android:summary="Select the kind of data that you would like to download"-->
-        <!--android:key="downloadType"-->
-        <!--android:defaultValue="1"-->
-        <!--android:entries="@array/listArray"-->
-        <!--android:entryValues="@array/listValues" />-->
 </PreferenceScreen>
