--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,6 +6,7 @@
     android:layout_height="fill_parent"
     >
     <TableLayout
+        android:id="@+id/second_activity_table_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:stretchColumns="*"
@@ -32,7 +33,7 @@
             android:layout_weight="1"
             android:gravity="center">
             <Button android:text="CAT_5" android:id="@+id/cat_button_5" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
-            <Button android:text="-- 1 --" android:id="@+id/change_cats_button" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.ButtonChangeCats android:text="-- 1 --" android:id="@+id/change_cats_button" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
         </TableRow>
         <TableRow
             android:layout_weight="0.5"
