added a universal transfer

--- a/app/src/main/res/layout/dialog_transfer.xml
+++ b/app/src/main/res/layout/dialog_transfer.xml
@@ -14,7 +14,7 @@
             android:layout_weight="0.5"
             android:gravity="center">
             <EditText
-                android:id="@+id/transfer_from_author_text"
+                android:id="@+id/transfer_dialog_from_author"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:inputType="text" />
@@ -23,10 +23,16 @@
             android:layout_weight="0.5"
             android:gravity="center">
             <EditText
-                android:id="@+id/transfer_to_author_text"
+                android:id="@+id/transfer_dialog_to_author"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:inputType="text" />
+        </TableRow>
+        <TableRow
+            android:layout_weight="0.5"
+            android:gravity="center">
+            <Button android:text="OK" android:id="@+id/transfer_dialog_ok" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <!-- <Button android:text="CANCEL" android:id="@+id/transfer_dialog_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent"/> -->
         </TableRow>
     </TableLayout>
 </LinearLayout>
