--- a/app/src/main/res/layout/dialog_transfer.xml
+++ b/app/src/main/res/layout/dialog_transfer.xml
@@ -9,10 +9,19 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:stretchColumns="*"
+        android:background="#1177fa"
         >
         <TableRow
             android:layout_weight="0.5"
             android:gravity="center">
+            <TextView
+                android:id="@+id/transfer_dialog_from_author_text"
+                android:text="transfer FROM:"
+                android:background="#ffffff"
+                android:textColor="#000000"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:inputType="text" />
             <EditText
                 android:id="@+id/transfer_dialog_from_author"
                 android:layout_width="fill_parent"
@@ -22,6 +31,14 @@
         <TableRow
             android:layout_weight="0.5"
             android:gravity="center">
+            <TextView
+                android:id="@+id/transfer_dialog_to_author_text"
+                android:text="transfer TO:"
+                android:background="#ffffff"
+                android:textColor="#000000"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:inputType="text" />
             <EditText
                 android:id="@+id/transfer_dialog_to_author"
                 android:layout_width="fill_parent"
