added 'secret' option for records

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -14,25 +14,26 @@
         <TableRow
             android:layout_weight="0.05"
             android:gravity="center">
-            <Button android:text="Settings" android:id="@+id/settings_btn" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
-            <Button android:text="Sync" android:id="@+id/sync_btn" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="Settings" android:id="@+id/settings_btn" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="Sync" android:id="@+id/sync_btn" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
         </TableRow>
         <TableRow
             android:layout_weight="1"
             android:gravity="center">
-            <Button android:text="CAT_1" android:id="@+id/cat_button_1" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
-            <Button android:text="CAT_2" android:id="@+id/cat_button_2" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="CAT_1" android:id="@+id/cat_button_1" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="CAT_2" android:id="@+id/cat_button_2" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
         </TableRow>
         <TableRow
             android:layout_weight="1"
             android:gravity="center">
-            <Button android:text="CAT_3" android:id="@+id/cat_button_3" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
-            <Button android:text="CAT_4" android:id="@+id/cat_button_4" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="CAT_3" android:id="@+id/cat_button_3" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="CAT_4" android:id="@+id/cat_button_4" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+
         </TableRow>
         <TableRow
             android:layout_weight="1"
             android:gravity="center">
-            <Button android:text="CAT_5" android:id="@+id/cat_button_5" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+            <com.example.gorg.monny.CategoryButton android:text="CAT_5" android:id="@+id/cat_button_5" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
             <com.example.gorg.monny.ButtonChangeCats android:text="-- 1 --" android:id="@+id/change_cats_button" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
         </TableRow>
         <TableRow
